--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -422,7 +422,7 @@ html{
    margin-top: 15px;
  }
 
- .categories {
+ .item .container {
   text-align: center;
   padding: 20px 0;
   background: #fff;
