--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -28,14 +28,17 @@
           </header>
           <div class="head"></div>
 
-        <div id="nav_btn" class="rounded_corners">
-            <button><a href="{% url 'home' %}">Home</a></button>
-            <button><a href="{% url 'recents' %}">Recents</a></button>
-            <button><a href="{% url 'unreturned' %}" class="active_tab">Unreturned</a></button>
-            <button><a href="{% url 'notification' %}">Notification</a></button>
-            <button><a href="{% url 'userprofile' %}">Account</a></button>
-            <button><a href="{% url 'logout' %}">Logout</a></button>
-        </div>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+               <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+               <a href="{% url 'recents' %}" class="navbar-brand">Recents</a>
+               <a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a>
+               <a href="{% url 'notification' %}" class="navbar-brand">Notifications</a>
+               <a href="{% url 'userprofile' %}" class="navbar-brand">Account</a>
+               <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+            </div>
+         </nav>
+         
         {% include 'home/result_list.html' %}
         <div id="container" class="rounded_corners">
 
