--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -101,7 +101,7 @@ Start coding here
 */
 
 /* jonas design */
-html{
+/* * {
     font-family: Arial, Helvetica, sans-serif; background-color: gray;
 }
 body {
