--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -415,7 +415,7 @@ html{
   cursor: pointer;
 }
 
- .items h3 {
+ .categories h3 {
    font-weight: bold;
    margin: 10px; /* Adjust the margin as needed */
    margin-left: 10px;
