--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -370,7 +370,7 @@ html{
  }
 
  .categories {
-  display: inline-block;
+  display: flex;
   grid-template-columns: auto auto auto auto auto;
   gap: 10px;
   padding: 15px;
