--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -38,7 +38,7 @@
                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
             </div>
          </nav>
-         
+
         {% include 'home/result_list.html' %}
         <div id="container" class="rounded_corners">
 
@@ -48,7 +48,7 @@
             <div id="wrapper">
 
                 <div id="top">
-                    <div id="left">
+                    <div id="left" class="pctr">
                         {% if item.item_borrowed.item_stock.item_information.item_photo %}
                             <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item" height="100%" object-fit="contain">
                         {% endif %}
