--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -370,10 +370,10 @@ html{
  }
 
  .categories {
-  display: flex;
-  grid-template-columns: auto auto auto auto auto;
-  gap: 10px;
-  padding: 15px;
+  display: grid;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
 }
 
  .item-form-item {
