--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -370,10 +370,10 @@ html{
  }
 
  .categories {
-  display: grid;
-  padding: 20px 0;
-  font-size: 30px;
-  text-align: center;
+  display: flex;
+  grid-template-columns: auto auto auto auto auto;
+  gap: 10px;
+  padding: 20px;
 }
 
  .item-form-item {
