--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -371,7 +371,7 @@ html{
 
  .categories {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   gap: 10px;
   padding: 20px;
 }
