--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -268,7 +268,7 @@ html{
     border-radius: 15px;
     margin-left: 15rem;
     margin-top: -10rem;
-    height: 100%;
+    height: 100px;
  }
 
 p{
