--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -45,7 +45,7 @@
             <!-- test block code -->
             <!-- template for the items -->
             {% for item in unreturned_items reversed %}
-            <div id="wrapper">
+            <div id="wrapper" class="group">
 
                 <div id="top">
                     <div id="left">
