--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -66,6 +66,26 @@
                 <div>
 
                 </div>
+                <div class="category" data-name="p-1">
+                    <img src="broom.png" alt="">
+                  </div>
+                  
+                    <div class="category" data-name="p-2">
+                       <img src="gadgets.png" alt="">
+                    </div>
+              
+                    <div class="category" data-name="p-3">
+                       <img src="documents.png" alt="">
+                    </div>
+           
+                    <div class="category" data-name="p-4">
+                       <img src="rooms.png" alt="">
+                    </div>
+           
+                    <div class="category" data-name="p-5">
+                       <img src="furnitures.png" alt="">
+                    </div>
+           
             {% endfor %}
             <div class="item_information" id="item_information">
                 <div class="item_header" id="item_header">
