--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -260,14 +260,14 @@ html{
  .inventory_item{
     border: 2px solid black;
     border-radius: 15px;
-    margin-left: 1rem;
-    margin-top: 1rem;
+    margin-left: .5rem;
+    margin-top: .5rem;
  }
 
  .disc{
     border: 2px solid black;
     margin-left: 15rem;
-    margin-top: -1rem;
+    margin-top: -10rem;
  }
 
 p{
