--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -50,7 +50,7 @@
                 <div id="top">
                     <div id="left">
                         {% if item.item_borrowed.item_stock.item_information.item_photo %}
-                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item" height="200px" object-fit="contain">
+                            <img src="{{ item.item_borrowed.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item" height="200px">
                         {% endif %}
 
                     </div>
