--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -262,7 +262,7 @@ html{
     border-radius: 15px;
     margin-left: .5rem;
     margin-top: .5rem;
-    height: 250px;
+    height: 200px;
     width: 250px;
  }
 
@@ -270,7 +270,7 @@ html{
     border: 2px solid black;
     margin-left: 15rem;
     margin-top: -10rem;
-    width:fit-content;
+    width: 80px;;
  }
 
 p{
