--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div id="bottom">
-                    <div id="btn_con">
+                    <div id="btn_con" class="btn">
                         <!-- <button id="return_btn" class="rounded_corners">Return</button> -->
                         <a href="{% url 'return_item' item.id item.item_borrowed.item_stock.id %}">Return</a>
                     </div>
