--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -270,7 +270,7 @@ html{
     border: 2px solid black;
     margin-left: 15rem;
     margin-top: -10rem;
-    width: 82%;
+    width: 81.5%;
  }
 
 p{
@@ -286,4 +286,5 @@ p{
 
  .btn{
     margin-left: 75rem;
+    margin-bottom: .5rem;
  }
