--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -61,7 +61,7 @@
                             Time Returned: {{ item.item_borrowed.item_date_returned }}<br />
                             Borrower: {{ item.item_borrowed.item_borrower }}
                         </p>
-                        <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
+                        <p1 id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p1>
 
                     </div>
                 </div>
