--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -278,8 +278,8 @@ p{
     margin-top: 5px;
  }
 
-.p1{
-    margin-left: 600rem;
+.quan{
+    margin-left: 60rem;
 }
  .group{
     border: 2px solid gray;
