--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -61,8 +61,9 @@
                             Time Returned: {{ item.item_borrowed.item_date_returned }}<br />
                             Borrower: {{ item.item_borrowed.item_borrower }}
                         </p>
-                        <p1 id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p1>
-
+                        <div class="quan">
+                            <p id="item_quantity">Item Quantity: {{ item.item_borrowed.item_quantity }}</p>
+                        </div>
                     </div>
                 </div>
                 <div id="bottom">
