--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -280,7 +280,7 @@ p{
 
 .quan{
     margin-left: 58rem;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
  .group{
     border: 2px solid gray;
