--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -25,7 +25,7 @@
           </form>
           <div class="right">
           <div class="logo-cont"></div>
-            <img src="static\home\logos\ccs.png" alt="">
+            <img src="static\home\logos\LSPU.png" alt="">
           </div>
     
         </header>
