--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -262,6 +262,7 @@ html{
     border-radius: 15px;
     margin-left: .5rem;
     margin-top: .5rem;
+    margin-bottom: 1rem;
     height: 200px;
     width: 230px;
  }
