--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -11,7 +11,7 @@
             <div class="logo"></div>
           <div class="logo-cont"></div>
           <div class="left">
-            <img src="C:\Users\ADMIN\Pictures\Saved Pictures\school\SchoolInventorySystem\static\home\logos\LSPU.png" alt="">
+            <img src="static\home\logos\LSPU.png" alt="">
           </div>
 
           <form method="GET" action="{% url 'search_items' %}"></form>
@@ -25,7 +25,7 @@
           </form>
           <div class="right">
           <div class="logo-cont"></div>
-            <img src="C:\Users\ADMIN\Pictures\Saved Pictures\school\SchoolInventorySystem\static\home\logos\ccs.png" alt="">
+            <img src="static\home\logos\ccs.png" alt="">
           </div>
     
         </header>
