--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -211,7 +211,7 @@ html{
     
  .header .logo-right img{
     width: 95px;
-    padding: 4rem;
+    padding: 3rem;
  }
 
  /*navigations*/
@@ -262,16 +262,15 @@ html{
     border-radius: 15px;
     margin-left: .5rem;
     margin-top: .5rem;
-    margin-bottom: 2rem;
-    height: 150px;
-    width: 150px;
+    height: 200px;
+    width: 230px;
  }
 
  .disc{
     border: 2px solid black;
-    margin-left: 10.5rem;
-    width: 87%;
-    margin-bottom: 5px;
+    margin-left: 15rem;
+    margin-top: -10rem;
+    width: 81.7%;
  }
 
 p{
