--- a/static/home/homestyle.css
+++ b/static/home/homestyle.css
@@ -376,7 +376,7 @@ html{
   padding: 20px;
 }
 
- .categories {
+ .item-form-item {
   background-color: #f8f9fa;
   padding: 10px 0;
   border-bottom: 1px solid black;
