--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -204,6 +204,9 @@ body{
     padding: auto;
  }
  
+ .chck{
+    margin-left: 5rem;
+ }
  a:link{
     color: #000;
     background-color: transparent;
