--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -45,8 +45,10 @@
 {% include 'home/result_list.html' %}
 <div id="main" class="form">
    <div class="item">
-    {% if unreturned_item_exist %}
-<p>You have unreturned items. Please check the Unreturned Items tab for more details.</p>
+      <div class="unreturn">
+         {% if unreturned_item_exist %}
+            <p>You have unreturned items. Please check the Unreturned Items tab for more details.</p>
+      </div>
     <ul>
         {% for item_info in unreturned_items %}
         <li>
