--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -204,9 +204,10 @@ body{
     padding: auto;
  }
  
- li{
-    margin-left: 2rem;
- }
+.unreturn{
+    display: inline;
+}
+
  a:link{
     color: #000;
     background-color: transparent;
