--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -37,7 +37,7 @@
                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
             </div>
          </nav>
-    <div class="form-container">
+    <div id="main" class="form-container">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
