--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -174,6 +174,8 @@ html{
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
     margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
     border-radius: 15px;
+    margin-left: 3rem;
+    margin-top: 2rem;
  }
  
  .form-item {
