--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -174,11 +174,9 @@ html{
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
     margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
     border-radius: 15px;
-    margin-left: 3rem;
-    margin-top: 2rem;
  }
  
- .form-item {
+ .form-group {
     background-color: #f8f9fa;
     padding: 10rem;
     border-bottom: 1px solid black;
