--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -169,7 +169,7 @@ html{
  .form-container{
     background-color: #f8f9fa;
     padding: 8rem 0;
-    margin-top: 1rem;
+    margin-top: -.5rem;
     border: 2px solid #dee2e6;
     border-bottom: 1px solid #dee2e6;
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
