--- a/static/userprofile/userprofile.css
+++ b/static/userprofile/userprofile.css
@@ -149,7 +149,7 @@ html{
     font-size: 1.5rem;
     margin-right: 10px;
     margin-left: 10px;
-    padding: 4rem;
+    padding: 3rem;
     text-decoration: none; /* Remove underline */
     position: relative; /* Position for the pseudo-element */
     transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
@@ -209,7 +209,7 @@ html{
 
 .info{
    margin-left: 3rem;
-   margin-top: .5rem;
+   margin-top: -10rem;
 }
  
  a:link{
