--- a/static/userprofile/editprofile.css
+++ b/static/userprofile/editprofile.css
@@ -166,15 +166,14 @@ html{
     transform: scaleX(1); /* Make the underline visible and scale it */
  }
  
- .form-group{
+ .form{
     background-color: #f8f9fa;
-    padding: 10rem;
-    border-bottom: 1px solid black;
-    margin: 35px 35px 35px 35px; /* Adjusted margin for better responsiveness */
+    padding: 13rem 0;
+    border: 2px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
+    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
     border-radius: 15px;
-    border: 3px solid gray; /* Add border style */
-    border-radius: 10px; /* Add border-radius for rounded corners */
-    padding: auto;
  }
  a:link{
     color: #000;
