--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'userprofile/userprofile.css' %}">
+        <link rel="stylesheet" href="{% static 'editprofile/editprofile.css' %}">
         <title>EDIT USER PROFILE</title>
     </head>
 <body>
