--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -179,3 +179,111 @@ button a {
 .active_tab{
     text-decoration: underline; color: pink;
 } */
+
+
+/* start code*/
+*{
+    font-family: 'Nunito', sans-serif;
+    margin:0; padding:0;
+    box-sizing: border-box;
+    outline: none; border:none;
+    text-decoration: none;
+    transition: all .2s linear;
+    text-transform: capitalize;
+ }
+ 
+ html{
+     font-size: 62.5%;
+     overflow-x: hidden;
+  }
+  
+  body{
+     background: #eee;
+  }
+ 
+  header {
+     background-color: #7a1a22;
+     height: 100px;;
+     width: 1372px;
+     flex-grow: 1;
+     display: flex;
+     align-items: center;
+  }
+ 
+  head {
+     display: flex;
+    background-color:#E67C37;
+    padding: 10px;
+  }
+ 
+  .logo .logo-cont .left img{
+   width: 135px;
+   padding: 2rem;
+  }
+  
+  .logo .logo-cont .right img{
+   width: 95px;
+   padding: 6rem;
+  }
+ 
+  .search-bar{
+    flex-grow: 1;
+    margin-left: 2%;
+    display: flex;
+    align-items: center;
+  }
+ 
+  .search-input{
+    width: 88%; /* Adjusted to take 100% width on smaller screens */
+    padding: 6px;
+    font-size: 13px;
+    border: none;
+    border-radius: 0.5px;
+  }
+ 
+  nav {
+     background-color: #f8f9fa;
+     padding: 15px 0;
+     border-bottom: 1px solid #dee2e6;
+     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+     margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+     border-radius: 15px;
+  }
+ 
+  .navbar-brand {
+     text-align: center;
+     color: black;
+    font-weight: bold;
+    font-size: 2rem;
+    margin-right: 10px;
+    margin-left: 10px;
+    text-decoration: none; /* Remove underline */
+    position: relative; /* Position for the pseudo-element */
+    transition: color 0.3s ease, font-weight 0.3s ease; /* Add a smooth color and font weight transition */
+    gap: 15px;
+  }
+  
+  /* Create an underline pseudo-element */
+  .navbar-brand::before {
+     content: '';
+    position: center;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: firebrick; /* Initial underline color */
+    visibility: hidden;
+    transform: scaleX(0); /* Initially invisible */
+    transition: all 0.3s ease; 
+  }
+  
+  /* Add hover effect */
+  .navbar-brand:hover {
+    color:firebrick; /* Change text color on hover */
+    font-weight: lighter; /* Change font weight on hover, adjust as needed */
+  }
+  
+  .navbar-brand:hover::before {
+    visibility: visible;
+    transform: scaleX(1); /* Make the underline visible and scale it */
+  }
