--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -5,17 +5,36 @@
         <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}" />
         <title>RECENTS</title>
     </head>
+   
+    <header>
+        <div class="logo"></div>
+      <div class="logo-cont"></div>
+      <div class="left">
+        <img src="LSPU.png" alt="">
+      </div>
 
-    
+      <form method="GET" action="{% url 'search_items' %}"></form>
+      <div class="search-bar">
+        <input type="text" name="q" value="{{ query }}" class="search-input" placeholder="Search for name/id/category">
+        <button type="submit">Search</button>
+        
+    <i class="fas fa-search"></i>
+
+        </div>
+      </form>
+      <div class="right">
+      <div class="logo-cont"></div>
+        <img src="ccs.png" alt="">
+      </div>
+
+    </header>
 
     <body>
         <h1 id="mema_title">Page ng RECENTS to boy. HAHA</h1>
 
-        <form method="GET" action="{% url 'search_items' %}">
-            <input type="text" name="q" value="{{ query }}" placeholder="Search for name/id/category">
-            <button type="submit">Search</button>
-          </form>
-
+        <div class="head">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="containers">
         <div id="nav_btn" class="rounded_corners">
             <button><a href="{% url 'home' %}">Home</a></button>
             <button><a href="{% url 'recents' %}" class="active_tab">Recents</a></button>
