--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -10,7 +10,7 @@
         <div class="logo"></div>
       <div class="logo-cont"></div>
       <div class="left">
-        <img src="LSPU.png" alt="">
+        <img src="static\recents\logo\LSPU.png" alt="">
       </div>
 
       <form method="GET" action="{% url 'search_items' %}"></form>
@@ -24,7 +24,7 @@
       </form>
       <div class="right">
       <div class="logo-cont"></div>
-        <img src="ccs.png" alt="">
+        <img src="static\recents\logo\ccs.png" alt="">
       </div>
 
     </header>
