--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="{% static 'recents/recentstyle.css' %}" />
+        <link rel="stylesheet" href="{% static '\recents\recentstyle.css' %}" />
         <title>RECENTS</title>
     </head>
    
