--- a/templates/userprofile/editprofile.html
+++ b/templates/userprofile/editprofile.html
@@ -37,7 +37,7 @@
                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
             </div>
          </nav>
-
+<div class="form">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <fieldset class="form-group">
@@ -67,6 +67,7 @@
                 <button class="btn btn-outline-info" type="submit">Update</button>
             </div>
         </form>
+    </div>
 </body>
 </html>
 
