--- a/static/userprofile/editprofile.css
+++ b/static/userprofile/editprofile.css
@@ -182,6 +182,9 @@ html{
     margin-left: 2rem;
  }
 
+ .border-bottom mb-4{
+    font-weight: bold;
+ }
  a:link{
     color: #000;
     background-color: transparent;
