--- a/static/userprofile/editprofile.css
+++ b/static/userprofile/editprofile.css
@@ -180,11 +180,9 @@ html{
     background-color: #f8f9fa;
     padding: .5rem 0;
     margin-left: 2rem;
+    margin-top: 1rem;
  }
 
- .border-bottom-mb-4{
-    font-weight: bold;
- }
  a:link{
     color: #000;
     background-color: transparent;
