--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -36,12 +36,12 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="containers">
         <div id="nav_btn" class="rounded_corners">
-            <button><a href="{% url 'home' %}">Home</a></button>
-            <button><a href="{% url 'recents' %}" class="active_tab">Recents</a></button>
-            <button><a href="{% url 'unreturned' %}">Unreturned</a></button>
-            <button><a href="{% url 'notification' %}">Notification</a></button>
-            <button><a href="{% url 'userprofile' %}">Account</a></button>
-            <button><a href="{% url 'logout' %}">Logout</a></button>
+            <button><a href="{% url 'home' %}" class="navbar-brand">Home</a></button>
+            <button><a href="{% url 'recents' %}" class="active_tab" class="navbar-brand">Recents</a></button>
+            <button><a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a></button>
+            <button><a href="{% url 'notification' %}" class="navbar-brand">Notification</a></button>
+            <button><a href="{% url 'userprofile' %}" class="navbar-brand">Account</a></button>
+            <button><a href="{% url 'logout' %}" class="navbar-brand">Logout</a></button>
         </div>
 
         <div id="container" class="rounded_corners">
