--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -47,7 +47,7 @@
    <div class="item">
       <div class="unreturn">
          {% if unreturned_item_exist %}
-            <p>You have unreturned items. Please check the Unreturned Items tab for more details.</p>
+            <p style="margin-top: 10px;">You have unreturned items. Please check the Unreturned Items tab for more details.</p>
       </div>
     <ul>
         {% for item_info in unreturned_items %}
