--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -288,4 +288,12 @@ button a {
     transform: scaleX(1); /* Make the underline visible and scale it */
   }
 
-  
+  .rounded_corners {
+    background-color: #f8f9fa;
+    padding: 15px 0;
+    border-bottom: 1px solid #dee2e6;
+    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+    border-radius: 15px;
+ }
+
