--- a/static/recents/recentstyle.css
+++ b/static/recents/recentstyle.css
@@ -240,6 +240,16 @@ button a {
     border: none;
     border-radius: 0.5px;
   }
+
+  .head head{
+    background-color: #f8f9fa;
+    padding: 20px 0;
+    border: 2px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
+    box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.1);
+    margin: 30px 70px 0; /* Adjusted margin for better responsiveness */
+    border-radius: 15px;
+  }
  
   nav {
      background-color: #f8f9fa;
