--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -43,7 +43,7 @@
             <button><a href="{% url 'userprofile' %}" class="navbar-brand">Account</a></button>
             <button><a href="{% url 'logout' %}" class="navbar-brand">Logout</a></button>
         </div>
-
+       </nav>
         <div id="container" class="rounded_corners">
 
             <!-- test block code -->
