--- a/static/notification/notificationstyle.css
+++ b/static/notification/notificationstyle.css
@@ -205,13 +205,10 @@ body{
  }
  
 .item{
- width: 100px;   
+    margin: 20px;
+    padding: 20px;
 }
 
-.unreturn{
-    width: 300px;
-    margin: 20px;
-}
 
  a:link{
     color: #000;
