--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -35,7 +35,7 @@
         <div class="head">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="containers">
-        <div id="nav_btn" class="rounded_corner">
+        <div id="nav_btn" class="rounded_corners">
             <button><a href="{% url 'home' %}" class="navbar-brand">Home</a></button>
             <button><a href="{% url 'recents' %}" class="active_tab" class="navbar-brand">Recents</a></button>
             <button><a href="{% url 'unreturned' %}" class="navbar-brand">Unreturned</a></button>
