--- a/templates/recents/admin_recents.html
+++ b/templates/recents/admin_recents.html
@@ -45,7 +45,7 @@
                 <div id="top">
                     <div id="left">
                         {% if items.item_stock.item_information.item_photo %}
-                            <img src="{{ items.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item"  height="100%" object-fit="contain">
+                            <img src="{{ items.item_stock.item_information.item_photo.url }}" alt="" class="inventory_item"  height="100%" object-fit="scale-down">
                         {% endif %}
 
                     </div>
