--- a/templates/userprofile/admin_userprofile.html
+++ b/templates/userprofile/admin_userprofile.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <div class="logo left">
-                <img src="static/unreturned/LSPU.png" alt="Left Logo">
+                <img src="static/unreturned/unreturnedadmin/LSPU.png" alt="Left Logo">
             </div>
             <div class="search-bar">
                 <form method="GET" action="{% url 'search_items_admin' %}">
@@ -17,7 +17,7 @@
                 </form>
             </div>
             <div class="logo right">
-                <img src="static/unreturned/CSS.png" alt="Right Logo">
+                <img src="static/unreturned/unreturnedadmin/CSS.png" alt="Right Logo">
             </div> 
         </header>
         <div class="head"></div>
