--- a/templates/notification/notification.html
+++ b/templates/notification/notification.html
@@ -46,7 +46,7 @@
 <div id="main" class="form">
    <div class="item">
          {% if unreturned_item_exist %}
-            <p>You have unreturned items. Please check the Unreturned Items tab for more details.</p>
+            <p>You have unreturned items.</p>
     <ul>
         {% for item_info in unreturned_items %}
         <li>
